# supform

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  renovate.json
.github/workflows/: backend.yml  frontend.yml  sdk.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  test_ai.py  test_api.py  test_auth_email.py  test_export_jobs.py  test_exporters.py  test_expressions.py  test_form_engine.py  test_forms_dashboard.py  test_functions.py  test_health.py  test_importers.py  test_inbox.py  test_migration_chain.py  test_notifications.py  test_odk_importer.py  test_quality.py  test_ratelimit.py  test_reports_and_library.py  test_schema_contract.py  test_scoring.py  test_security.py  test_sharing.py  test_storage.py  test_submissions_advanced.py  test_v2_schema_fields.py  test_validation_workflow.py  (+2 more)
docs/: api.md  form-schema.md  formulas.md  quizzes.md
e2e/: smoke.mjs
frontend/: Dockerfile  README.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
infra/: README.md
mobile/: .env.example  .gitignore  README.md  capacitor.config.ts  package-lock.json  package.json
scripts/: mock_ai.py  smoke_e2e.py
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: build_form.py
sdk/python/supform_sdk/: __init__.py  client.py  fields.py  form.py
sdk/python/tests/: test_client.py  test_form_builder.py  test_quiz.py
(+224 files in other folders)
